--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -745,22 +745,25 @@
 		"Page": {
 			"heading": "Pesquisar Paragens"
 		},
-		"PageToolbar": {
-			"by_current_view": {
-				"all": "Todas as Paragens",
-				"favorites": "Favoritas"
-			},
-			"by_search": {
-				"placeholder": "Pesquisar por nome, localidade..."
+		"Single": {
+			"heading": "Pesquisar Paragens",
+			"lines_that_pass_here": "Linhas que passam nesta paragem"
+		},
+		"StopsListToolbar": {
+			"filters": {
+				"by_current_view": {
+					"all": "Todas as Paragens",
+					"favorites": "Favoritas"
+				},
+				"by_search": {
+					"placeholder": "Pesquisar por nome, localidade..."
+				}
 			},
 			"found_items_counter": {
 				"all": "{count, plural, =0 {Nenhuma paragem encontrada.} one {Encontrada # paragem:} other {Encontradas # paragens:}}",
 				"favorites": "{count, plural, =0 {Nenhuma paragem favorita encontrada.} one {Encontrada # paragem favorita:} other {Encontradas # paragens favoritas:}}"
-			}
-		},
-		"Single": {
-			"heading": "Pesquisar Paragens",
-			"lines_that_pass_here": "Linhas que passam nesta paragem"
+			},
+			"heading": "Pesquisar Paragens"
 		},
 		"collapse_filters": "Esconder Filtros",
 		"expand_filters": "Expandir Filtros"
