--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -724,9 +724,6 @@
 		}
 	},
 	"stops": {
-		"FavoritesList": {
-			"no_favorites": "Ainda não tem paragens favoritas"
-		},
 		"NextBusRow": {
 			"arriving_now": "A chegar",
 			"passed": "{value}",
@@ -764,6 +761,9 @@
 				"favorites": "{count, plural, =0 {Nenhuma paragem favorita encontrada.} one {Encontrada # paragem favorita:} other {Encontradas # paragens favoritas:}}"
 			},
 			"heading": "Pesquisar Paragens"
+		},
+		"StopsListViewFavorites": {
+			"no_favorites": "Ainda não tem paragens favoritas"
 		},
 		"collapse_filters": "Esconder Filtros",
 		"expand_filters": "Expandir Filtros"
