--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -734,17 +734,20 @@
 			"hide": "Esconder passagens anteriores",
 			"show": "Ver passagens anteriores"
 		},
-		"NextBusesHeader": {
-			"estimate": "Previsão",
-			"headsign": "Destino",
-			"line": "Linha"
-		},
 		"Page": {
 			"heading": "Pesquisar Paragens"
 		},
 		"Single": {
 			"heading": "Pesquisar Paragens",
 			"lines_that_pass_here": "Linhas que passam nesta paragem"
+		},
+		"StopsDetailContentListHeader": {
+			"summary": "Horários estimados de passagem na paragem <stopName>{stop_name}</stopName> para o dia <dayName>{day_name, date, long}</dayName>. <changeDay>Alterar dia ›</changeDay>",
+			"trips_legend": {
+				"estimate": "Previsão",
+				"headsign": "Destino",
+				"line": "Linha"
+			}
 		},
 		"StopsListToolbar": {
 			"filters": {
