--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -827,6 +827,11 @@
 			"by_municipality": {
 				"label": "Filtrar por Município"
 			},
+			"filter_by": {
+				"capacity": "Pessoas em espera",
+				"municipality_name": "Município",
+				"time": "Tempo de espera"
+			},
 			"found_items_counter": "{count, plural, =0 {Nenhuma loja encontrada.} one {Encontrada # loja:} other {Encontradas # lojas:}}"
 		}
 	},
