--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -644,7 +644,7 @@
 			"Navegante": {
 				"heading": "Planeie a sua viagem com o navegante®",
 				"subheading": "Utilize o serviço navegante® para planear a sua viagem, de A a B, combinando vários modos de transporte, se necessário. Descubra toda as opções que estão incluídas com a sua subscrição.",
-				"button": "Ver Op"
+				"button": "Ver Opções"
 			}
 		}
 	},
