--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -242,7 +242,7 @@
 				"POLICE_ACTIVITY": "Atividade Policial",
 				"STRIKE": "Greve",
 				"TECHNICAL_PROBLEM": "Problema Técnico",
-				"UNKNOWN_CAUSE": "Outras Causas",
+				"UNKNOWN_CAUSE": "Causa Desconhecida",
 				"WEATHER": "Mau Tempo"
 			},
 			"effect": {
@@ -289,11 +289,22 @@
 			"open": "Abrir"
 		},
 		"AlertsListToolbar": {
+			"filters": {
+				"text_search": "Procurar alerta por titulo, descrição, localização...",
+				"lines_label": "Filtrar por linha",
+				"stops_label": "Filtrar por paragem"
+			},
 			"by_date": {
-				"current": "Esta semana",
-				"future": "Futuros"
+				"current": "Esta semana ({count})",
+				"future": "Futuros ({count})"
 			},
 			"found_items_counter": "{count, plural, =0 {Nenhum alerta encontrado.} one {Encontrado # alerta:} other {Encontrados # alertas:}}"
+		},
+		"SelectCause": {
+			"placeholder": "Filtrar por causa"
+		},
+		"SelectEffect": {
+			"placeholder": "Filtrar por efeito"
 		}
 	},
 	"analytics": {
