--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -289,14 +289,14 @@
 			"open": "Abrir"
 		},
 		"AlertsListToolbar": {
-			"filters": {
-				"text_search": "Procurar alerta por titulo, descrição, localização...",
-				"lines_label": "Filtrar por linha",
-				"stops_label": "Filtrar por paragem"
-			},
 			"by_date": {
 				"current": "Esta semana ({count})",
 				"future": "Futuros ({count})"
+			},
+			"filters": {
+				"lines_label": "Filtrar por linha",
+				"stops_label": "Filtrar por paragem",
+				"text_search": "Procurar alerta por titulo, descrição, localização..."
 			},
 			"found_items_counter": "{count, plural, =0 {Nenhum alerta encontrado.} one {Encontrado # alerta:} other {Encontrados # alertas:}}"
 		},
@@ -341,6 +341,11 @@
 		}
 	},
 	"common": {
+		"NextArrivals": {
+			"arriving": "A chegar",
+			"hours": "h",
+			"minutes": "min"
+		},
 		"SelectOperationalDay": {
 			"today": "Hoje",
 			"tomorrow": "Amanhã"
@@ -533,9 +538,6 @@
 				"subtitle": "executabilidade do serviço de todos os percursos desta linha nos últimos 15 dias"
 			}
 		},
-		"LinesDetailPathMap": {
-			"active_vehicles_counter": "{count, plural, =0 {Nenhum veículo em circulação} one {# veículo em circulação} other {# veículos em circulação}}"
-		},
 		"LinesListToolbar": {
 			"by_current_view": {
 				"all": "Todas as Linhas",
@@ -603,6 +605,9 @@
 		}
 	},
 	"map": {
+		"MapViewStyleVehicles": {
+			"vehicles_counter": "{count, plural, =0 {Nenhum veículo em circulação} one {# veículo em circulação} other {# veículos em circulação}}"
+		},
 		"toolbar": {
 			"center_map": "Centrar Mapa",
 			"open_google_maps": "Abrir no Google Maps",
@@ -647,15 +652,15 @@
 	},
 	"planner": {
 		"Page": {
+			"Navegante": {
+				"button": "Ver Opções",
+				"heading": "Planeie a sua viagem com o navegante®",
+				"subheading": "Utilize o serviço navegante® para planear a sua viagem, de A a B, combinando vários modos de transporte, se necessário. Descubra toda as opções que estão incluídas com a sua subscrição."
+			},
 			"Partners": {
 				"disclaimer": "Edite esta página no Github se pretende incluir a sua aplicação. A ordem é aleatória. Apenas são permitidas entradas que disponibilizem simultaneamente horários planeados e em tempo real ou posição de veículos.",
 				"heading": "Os nossos parceiros",
 				"subheading": "Porque os nossos dados são abertos, existem várias aplicações que oferecem experiências personalizadas para melhorar o seu dia-a-dia nos transportes."
-			},
-			"Navegante": {
-				"heading": "Planeie a sua viagem com o navegante®",
-				"subheading": "Utilize o serviço navegante® para planear a sua viagem, de A a B, combinando vários modos de transporte, se necessário. Descubra toda as opções que estão incluídas com a sua subscrição.",
-				"button": "Ver Opções"
 			}
 		}
 	},
@@ -742,43 +747,55 @@
 		}
 	},
 	"stops": {
-		"FavoritesList": {
-			"no_favorites": "Ainda não tem paragens favoritas"
-		},
-		"NextBusRow": {
-			"arriving_now": "A chegar",
-			"passed": "{value}",
-			"realtime": "{value} min",
-			"scheduled": "{value}"
-		},
-		"NextBuses": {
-			"hide": "Esconder passagens anteriores",
-			"show": "Ver passagens anteriores"
-		},
-		"NextBusesHeader": {
-			"estimate": "Previsão",
-			"headsign": "Destino",
-			"line": "Linha"
-		},
 		"Page": {
 			"heading": "Pesquisar Paragens"
-		},
-		"PageToolbar": {
-			"by_current_view": {
-				"all": "Todas as Paragens",
-				"favorites": "Favoritas"
-			},
-			"by_search": {
-				"placeholder": "Pesquisar por nome, localidade..."
-			},
-			"found_items_counter": {
-				"all": "{count, plural, =0 {Nenhuma paragem encontrada.} one {Encontrada # paragem:} other {Encontradas # paragens:}}",
-				"favorites": "{count, plural, =0 {Nenhuma paragem favorita encontrada.} one {Encontrada # paragem favorita:} other {Encontradas # paragens favoritas:}}"
-			}
 		},
 		"Single": {
 			"heading": "Pesquisar Paragens",
 			"lines_that_pass_here": "Linhas que passam nesta paragem"
+		},
+		"StopsDetailContentTimetableHeader": {
+			"summary": "Horários estimados de passagem na paragem <stopName>{stop_name}</stopName> para o dia <dayName>{day_name, date, long}</dayName>. <changeDay>Alterar dia ›</changeDay>",
+			"trips_legend": {
+				"estimate": "Previsão",
+				"headsign": "Destino",
+				"line": "Linha"
+			}
+		},
+		"StopsDetailContentTimetableRealtime": {
+			"end_of_day": "Fim do Dia",
+			"no_service": "Sem Serviço Hoje",
+			"show_past_trips_toggle": {
+				"hide": "Esconder passagens anteriores",
+				"show": "Ver passagens anteriores"
+			}
+		},
+		"StopsDetailContentTimetableRow": {
+			"localities": {
+				"label": "Passa por"
+			}
+		},
+		"StopsDetailContentTimetableSchedule": {
+			"no_service": "Sem Serviço para o dia selecionado"
+		},
+		"StopsListToolbar": {
+			"filters": {
+				"by_current_view": {
+					"all": "Todas as Paragens",
+					"favorites": "Favoritas"
+				},
+				"by_search": {
+					"placeholder": "Pesquisar por nome, localidade..."
+				}
+			},
+			"found_items_counter": {
+				"all": "{count, plural, =0 {Nenhuma paragem encontrada.} one {Encontrada # paragem:} other {Encontradas # paragens:}}",
+				"favorites": "{count, plural, =0 {Nenhuma paragem favorita encontrada.} one {Encontrada # paragem favorita:} other {Encontradas # paragens favoritas:}}"
+			},
+			"heading": "Pesquisar Paragens"
+		},
+		"StopsListViewFavorites": {
+			"no_favorites": "Ainda não tem paragens favoritas"
 		},
 		"collapse_filters": "Esconder Filtros",
 		"expand_filters": "Expandir Filtros"
