--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -263,10 +263,6 @@
 			"more_info": "Mais informações",
 			"open_full_image": "Abrir imagem numa nova janela"
 		},
-		"AlertsList": {
-			"heading": "Alertas de Serviço",
-			"subheading": "Fique a par de todas as alterações à rede. Lorem ipsum dolor sit amet."
-		},
 		"AlertsListEmpty": {
 			"default": {
 				"action_1": "Consultar Alertas Ativos Hoje",
@@ -298,7 +294,9 @@
 				"stops_label": "Filtrar por paragem",
 				"text_search": "Procurar alerta por titulo, descrição, localização..."
 			},
-			"found_items_counter": "{count, plural, =0 {Nenhum alerta encontrado.} one {Encontrado # alerta:} other {Encontrados # alertas:}}"
+			"found_items_counter": "{count, plural, =0 {Nenhum alerta encontrado.} one {Encontrado # alerta:} other {Encontrados # alertas:}}",
+			"heading": "Alertas de Serviço",
+			"subheading": "Fique a par de todas as alterações à rede. Lorem ipsum dolor sit amet."
 		},
 		"SelectCause": {
 			"placeholder": "Filtrar por causa"
@@ -801,11 +799,6 @@
 		"expand_filters": "Expandir Filtros"
 	},
 	"stores": {
-		"StoresList": {
-			"external_link": "Rede de agentes navegante®",
-			"heading": "Lojas e Rede de Agentes",
-			"subheading": "Disponíveis para todos os passageiros, os Espaços navegante® estão dedicados a prestar informações sobre a rede e bilhética Carris Metropolitana, possibilitando o esclarecimento de dúvidas, a emissão de cartões navegante® e a adesão a perfis e descontos. É possível também efetuar o carregamento de títulos nos pontos de atendimento PayShop® da rede de agentes navegante®."
-		},
 		"StoresListEmpty": {
 			"by_municipality": {
 				"action_1": "Consultar Horários das Lojas",
@@ -862,12 +855,15 @@
 			"by_municipality": {
 				"label": "Filtrar por Município"
 			},
+			"external_link": "Rede de agentes navegante®",
 			"filter_by": {
 				"capacity": "Pessoas em espera",
 				"municipality_name": "Município",
 				"time": "Tempo de espera"
 			},
-			"found_items_counter": "{count, plural, =0 {Nenhuma loja encontrada.} one {Encontrada # loja:} other {Encontradas # lojas:}}"
+			"found_items_counter": "{count, plural, =0 {Nenhuma loja encontrada.} one {Encontrada # loja:} other {Encontradas # lojas:}}",
+			"heading": "Lojas e Rede de Agentes",
+			"subheading": "Disponíveis para todos os passageiros, os Espaços navegante® estão dedicados a prestar informações sobre a rede e bilhética Carris Metropolitana, possibilitando o esclarecimento de dúvidas, a emissão de cartões navegante® e a adesão a perfis e descontos. É possível também efetuar o carregamento de títulos nos pontos de atendimento PayShop® da rede de agentes navegante®."
 		}
 	},
 	"toast": {
