Switch locale flags for language name

--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -468,11 +468,11 @@
 		"LocaleSwitcher": {
 			"en-US": {
 				"alt": "English",
-				"label": "🇬🇧"
+				"label": "English"
 			},
 			"pt-PT": {
 				"alt": "Português",
-				"label": "🇵🇹"
+				"label": "Português"
 			}
 		}
 	},
