--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -478,7 +478,7 @@
 	},
 	"home": {
 		"MainCarouselCard": {
-			"learn_more": "Saber mais"
+			"learn_more": "Saber mais -"
 		},
 		"NewsSection": {
 			"section_heading": "Notícias"
