Added Files and Press Knowledge Base and Statements pages

--- a/frontend/i18n/translations/en.json
+++ b/frontend/i18n/translations/en.json
@@ -800,7 +800,7 @@
 				"icons": "Icons",
 				"images": "Image Bank",
 				"logo": "Logo",
-				"paragraph_1": "Carris Metropolitana is an initiative of the 18 municipalities of amL which, through Transportes Metropolitanos de Lisboa (TML), merges the road operation of the entire amL into the same image and level of service, focused on serving the population, with a high degree of technological and operational complexity, in this case, mainly due to geographic and population size.\n\nReducing the average age of the fleet in operation, introducing improvements in the environmental performance of vehicles, providing more and better information to the public - which is also standardized and simplified to metropolitan scale - and increasing the offer of what was practiced before entry into operation, Carris Metropolitana continues working to create mobility options to ensure quality public transport.\n\nIntending to encourage sustainable behaviors and contribute to social equity and territorial in amL, Carris Metropolitana operates the municipal networks for 15 of the 18 municipalities (Barreiro, Cascais and Lisbon maintain local operations) and the entire intermunicipal operation of the 18 municipalities."
+				"paragraph_1": "Carris Metropolitana is an initiative of the 18 municipalities of amL which, through Transportes Metropolitanos de Lisboa (TML), merges the road operation of the entire amL into the same image and level of service, focused on serving the population, with a high degree of technological and operational complexity, in this case, mainly due to geographic and population size."
 			},
 			"faq": {
 				"faqs": [
