--- a/frontend/i18n/translations/pt.json
+++ b/frontend/i18n/translations/pt.json
@@ -800,7 +800,7 @@
 				"icons": "Ícones",
 				"images": "Banco de Imagens",
 				"logo": "Logo",
-				"paragraph_1": "A Carris Metropolitana é uma iniciativa dos 18 municípios da amL que, através da Transportes Metropolitanos de Lisboa (TML), funde a operação rodoviária de toda a amL numa mesma imagem e nível de serviço, focado no serviço às populações, com um elevado grau de complexidade tecnológica e operacional, neste caso, sobretudo pela dimensão geográfica e populacional.\n\nReduzindo a idade média da frota em operação, introduzindo melhorias na performance ambiental nas viaturas, prestando mais e melhor informação ao público - que é também uniformizada e simplificada à escala metropolitana - e aumentando a oferta do que era praticado antes da entrada em funcionamento, a Carris Metropolitana continua a trabalhar no sentido de criar opções de mobilidade para assegurar um transporte público de qualidade.\n\nPretendendo fomentar comportamentos sustentáveis e contribuir para a equidade social e territorial na amL, a Carris Metropolitana opera as redes municipais para 15 dos 18 municípios (Barreiro, Cascais e Lisboa mantêm as operações locais) e a totalidade da operação intermunicipal dos 18 municípios.."
+				"paragraph_1": "A Carris Metropolitana é uma iniciativa dos 18 municípios da amL que, através da Transportes Metropolitanos de Lisboa (TML), funde a operação rodoviária de toda a amL numa mesma imagem e nível de serviço, focado no serviço às populações, com um elevado grau de complexidade tecnológica e operacional, neste caso, sobretudo pela dimensão geográfica e populacional."
 			},
 			"faq": {
 				"faqs": [
