Refactor LinesDetailMetrics component structure and update MetricsCardByLine - Restructured component layout using Grid in LinesDetailMetrics. - Improved data sorting and handling in MetricsCardByLine. - Enhanced UI elements for better user experience. - Updated service metrics with new labels. - Introduced DemandByLineMetrics type for better data organization. - Resolved potential bugs and enhanced code readability. - Updated translation files. - Added ServiceMetrics interface. - Added DemandByLineMetrics interface. - Concealed unnecessary interfaces. - Improved context state management for LinesDetail. - Enhanced code quality and maintainability.
Issue: #123

--- a/frontend/i18n/translations/en.json
+++ b/frontend/i18n/translations/en.json
@@ -659,10 +659,12 @@
 		"LinesDetailMetrics": {
 			"demand": {
 				"big_number": "{value, number}",
+				"label": "Passengers transported / day",
 				"subtitle": "passengers transported on this line in the last 15 days"
 			},
 			"service": {
 				"big_number": "{value, number, percentage}",
+				"label": "Success rate",
 				"subtitle": "feasibility of the service of all routes on this line in the last 15 days"
 			}
 		},
