--- a/frontend/i18n/translations/pt.json
+++ b/frontend/i18n/translations/pt.json
@@ -347,7 +347,7 @@
 			},
 			"heading": "Nova versão disponível",
 			"subheading": "Por favor atualize a app navegante® para a versão mais recente.",
-			"text": "A nova versão inclui melhorias de desempenho, correções de erros e ."
+			"text": "A nova versão inclui otimizações de desempenho e correções de erros para uma melhor experiência de utilização."
 		}
 	},
 	"cards": {
